--- a/src/styleguide/template.html
+++ b/src/styleguide/template.html
@@ -28,9 +28,8 @@
         width: 600px;
       }
 
-      .ss-section .row>[class^=col-] {
-        border: 1px solid rgba(86,61,124,.2);
-        background-color: rgba(86,61,124,.15);
+      .ss-code-live, .bd-example {
+        margin-bottom: 30px;
       }
 
     </style>
